2014-11-23
RnaSeqSampleSize 0.99.3:
 * New parameter: countFilterInRawDistribution, selectedGeneFilterByCount;
 * Other improvement based on the comments from Bioconductor reviewer;

2014-11-18
RnaSeqSampleSize 0.99.2:
 * The vignette was switched to a BiocStyle;
 * Other improvement based on the comments from Bioconductor reviewer;

2014-10-19
RnaSeqSampleSize 0.99.1:
 * Parameter was used to determine the power of genes below minAveCount;
 * Some recommendations from BiocCheck were improved;

2014-10-16
RnaSeqSampleSize 0.99.0:
 * Submit to Bioconductor.

2014-10-15
RnaSeqSampleSize 0.5.0:
 * The datasets from TCGA were moved to RnaSeqSampleSizeData package;
 * The examples were improved;
 * The vignette was generated;

2014-10-10
RnaSeqSampleSize 0.4.0:
 * Rcpp package was used to make some functions faster;
 * The package structure was improved;
 * The web interface was improved;

2014-08-01
RnaSeqSampleSize 0.3.0:
 * Beta approximate method was improved and used in most of the cases;
 * Read count and dispersion distribution estimation function was improved;
 * Estimation power or sample size by read count and dispersion distribution was improved.

2014-06-01
RnaSeqSampleSize 0.2.0:
 * The function of estimation power or sample size by read count and dispersion distribution was imported and improved.

2014-03-30
RnaSeqSampleSize 0.1.7:
 * An approximate estimation method was used to decrease the running time when average read count (lambda0) was larger than 20;
 * A plotting power curve function plot_power_curve was provided;

2014-03-19
RnaSeqSampleSize 0.1.6:
 * The code was improved to fit the web interface;
 * The function est_power was provided for power estimation;
 * A bug was fixed;

2014-03-16
RnaSeqSampleSize 0.1.5:
 * The C code for R function dnbinom was improved to decrease the running time greatly;
 * The powers for different N in estimating sample size were returned to prepare power curve;

2014-03-01
RnaSeqSampleSize 0.1.4: