@@ -1,8 +1,8 @@
 Package: RnaSeqSampleSize
 Type: Package
 Title: RnaSeqSampleSize
-Version: 0.99.3
-Date: 2014-11-23
+Version: 0.99.4
+Date: 2014-11-29
 Author: Shilin Zhao, Chung-I Li, Yan Guo, Quanhu Sheng, Yu Shyr
 Maintainer: Shilin Zhao <zhaoshilin@gmail.com>
 Description: RnaSeqSampleSize package provides a sample size calculation method
