@@ -4,7 +4,7 @@ export(convertIdOneToOne)
 export(est_count_dispersion)
 export(est_power)
 export(est_power_curve)
-export(est_power_distribtuion)
+export(est_power_distribution)
 export(optimize_parameter)
 export(plot_power_curve)
 export(sample_size)
