@@ -36,7 +36,7 @@ est_count_dispersion<-function(counts,group=rep(1,NCOL(counts)),subSampleNum=20,
 	return(y)
 }
 
-##' est_power_distribtuion
+##' est_power_distribution
 ##' 
 ##' A function to estitamete the power for differential expression analysis of RNA-seq data.
 ##' 
@@ -63,17 +63,17 @@ est_count_dispersion<-function(counts,group=rep(1,NCOL(counts)),subSampleNum=20,
 ##' @examples \dontrun{
 ##' #Please note here the parameter repNumber was very small (5) to make the example code faster.
 ##' #We suggest repNumber should be at least set as 100 in real analysis.
-##' est_power_distribtuion(n=65,f=0.01,rho=2,distributionObject="TCGA_READ",repNumber=5)
+##' est_power_distribution(n=65,f=0.01,rho=2,distributionObject="TCGA_READ",repNumber=5)
 ##' #Power estimation based on some interested genes. We use storeProcess=TRUE to return the details for all selected genes.
 ##' selectedGenes<-names(TCGA_READ$pseudo.counts.mean)[c(1,3,5,7,9,12:30)]
-##' powerDistribution<-est_power_distribtuion(n=65,f=0.01,rho=2,distributionObject="TCGA_READ",selectedGenes=selectedGenes,minAveCount=1,storeProcess=TRUE)
+##' powerDistribution<-est_power_distribution(n=65,f=0.01,rho=2,distributionObject="TCGA_READ",selectedGenes=selectedGenes,minAveCount=1,storeProcess=TRUE)
 ##' str(powerDistribution)
 ##' mean(powerDistribution$power)
 ##' #Power estimation based on genes in interested pathway
-##' powerDistribution<-est_power_distribtuion(n=65,f=0.01,rho=2,distributionObject="TCGA_READ",pathway="00010",minAveCount=1,storeProcess=TRUE)
+##' powerDistribution<-est_power_distribution(n=65,f=0.01,rho=2,distributionObject="TCGA_READ",pathway="00010",minAveCount=1,storeProcess=TRUE)
 ##' mean(powerDistribution$power)
 ##' }
-est_power_distribtuion<-function(n,f=0.1,m=10000,m1=100, w=1, rho=2,repNumber=100,dispersionDigits=1,distributionObject,libSize,minAveCount=5,maxAveCount=2000,seed=123,selectedGenes,pathway,species="hsa",storeProcess=FALSE,countFilterInRawDistribution=TRUE,selectedGeneFilterByCount=FALSE) {
+est_power_distribution<-function(n,f=0.1,m=10000,m1=100, w=1, rho=2,repNumber=100,dispersionDigits=1,distributionObject,libSize,minAveCount=5,maxAveCount=2000,seed=123,selectedGenes,pathway,species="hsa",storeProcess=FALSE,countFilterInRawDistribution=TRUE,selectedGeneFilterByCount=FALSE) {
 	temp<-selectDistribution(distributionObject=distributionObject,libSize=libSize,repNumber=repNumber,dispersionDigits=dispersionDigits,minAveCount=minAveCount,maxAveCount=maxAveCount,seed=seed,selectedGenes=selectedGenes,pathway=pathway,species=species,countFilterInRawDistribution=countFilterInRawDistribution,selectedGeneFilterByCount=selectedGeneFilterByCount)
 	dispersionDistribution<-temp$selectedDispersion
 	countDistribution<-temp$selectedCount
@@ -85,7 +85,7 @@ est_power_distribtuion<-function(n,f=0.1,m=10000,m1=100, w=1, rho=2,repNumber=10
 	alpha<-leastPower*m1*f/((m-m1)*(1-f))
 	
 	#power distribution
-	powerDistribution<-est_power_distribtuion_root(n=n,alpha=alpha,w=w, rho=rho,dispersionDistribution=dispersionDistribution,countDistribution=countDistribution)
+	powerDistribution<-est_power_distribution_root(n=n,alpha=alpha,w=w, rho=rho,dispersionDistribution=dispersionDistribution,countDistribution=countDistribution)
 	if (storeProcess) {
 		return(list(power=powerDistribution,count=countDistribution,dispersion=dispersionDistribution))
 	} else {
@@ -94,7 +94,7 @@ est_power_distribtuion<-function(n,f=0.1,m=10000,m1=100, w=1, rho=2,repNumber=10
 }
 
 
-est_power_distribtuion_root<-function(n,alpha=0.05, w=1,k=1, rho=2, error=0.001,dispersionDistribution,countDistribution) {
+est_power_distribution_root<-function(n,alpha=0.05, w=1,k=1, rho=2, error=0.001,dispersionDistribution,countDistribution) {
 	#power distribution
 	powerDistribution<-NULL
 	for (dispersion in unique(dispersionDistribution)) {
