@@ -1,9 +1,9 @@
 % Generated by roxygen2 (4.0.2): do not edit by hand
-\name{est_power_distribtuion}
-\alias{est_power_distribtuion}
-\title{est_power_distribtuion}
+\name{est_power_distribution}
+\alias{est_power_distribution}
+\title{est_power_distribution}
 \usage{
-est_power_distribtuion(n, f = 0.1, m = 10000, m1 = 100, w = 1,
+est_power_distribution(n, f = 0.1, m = 10000, m1 = 100, w = 1,
   rho = 2, repNumber = 100, dispersionDigits = 1, distributionObject,
   libSize, minAveCount = 5, maxAveCount = 2000, seed = 123, selectedGenes,
   pathway, species = "hsa", storeProcess = FALSE,
@@ -61,14 +61,14 @@ A function to estitamete the power for differential expression analysis of RNA-s
 \dontrun{
 #Please note here the parameter repNumber was very small (5) to make the example code faster.
 #We suggest repNumber should be at least set as 100 in real analysis.
-est_power_distribtuion(n=65,f=0.01,rho=2,distributionObject="TCGA_READ",repNumber=5)
+est_power_distribution(n=65,f=0.01,rho=2,distributionObject="TCGA_READ",repNumber=5)
 #Power estimation based on some interested genes. We use storeProcess=TRUE to return the details for all selected genes.
 selectedGenes<-names(TCGA_READ$pseudo.counts.mean)[c(1,3,5,7,9,12:30)]
-powerDistribution<-est_power_distribtuion(n=65,f=0.01,rho=2,distributionObject="TCGA_READ",selectedGenes=selectedGenes,minAveCount=1,storeProcess=TRUE)
+powerDistribution<-est_power_distribution(n=65,f=0.01,rho=2,distributionObject="TCGA_READ",selectedGenes=selectedGenes,minAveCount=1,storeProcess=TRUE)
 str(powerDistribution)
 mean(powerDistribution$power)
 #Power estimation based on genes in interested pathway
-powerDistribution<-est_power_distribtuion(n=65,f=0.01,rho=2,distributionObject="TCGA_READ",pathway="00010",minAveCount=1,storeProcess=TRUE)
+powerDistribution<-est_power_distribution(n=65,f=0.01,rho=2,distributionObject="TCGA_READ",pathway="00010",minAveCount=1,storeProcess=TRUE)
 mean(powerDistribution$power)
 }
 }
